syntax = "proto3";

package wres.statistics.generated;

import "wresproto/diagram_metric.proto";

option java_package = "wres.statistics.generated";
option java_outer_classname = "DiagramStatisticProto";
option java_multiple_files = true;

message DiagramStatistic
{
    /*A message that encapsulates a diagram statistic, such as the binned 
    statistics associated with a reliability diagram. */

    DiagramMetric metric = 1;
    // The metric.
    
    repeated DiagramStatisticComponent statistics = 2;
    // The diagram component values.
    
    message DiagramStatisticComponent 
    {
        // A diagram component.
    
        DiagramMetric.DiagramMetricComponent metric = 1;
        // Metric component.
        
        repeated double values = 2;
        // The component values.

        string name = 3;
        // A name to distinguish the component. This is most useful when
        // a diagram has multiple instances of the same component.
    }
}